--- a/src/app/pages/e-learning-config/components/config-list/config-list.component.html
+++ b/src/app/pages/e-learning-config/components/config-list/config-list.component.html
@@ -23,6 +23,7 @@
             <ul nz-menu>
               <li nz-menu-item (click)="navigateGeneralConfig()">Cấu hình chung</li>
               <li nz-menu-item (click)="navigateHomeConfig()">Cấu hình trang chủ</li>
+              <li nz-menu-item (click)="navigateAboutUsConfig()">Cấu hình trang giới thiệu</li>
             </ul>
           </nz-dropdown-menu>
         </ng-template>
