feature: add sepay method payment

--- a/src/app/pages/forum/components/config/forum-config-detail/forum-config-detail.component.html
+++ b/src/app/pages/forum/components/config/forum-config-detail/forum-config-detail.component.html
@@ -133,7 +133,7 @@
           <span class="text-label">
             Đăng bài viết
           </span>
-          <nz-input-number formControlName="postArticleScore" [nzMin]="0" [nzMax]="10" [nzStep]="1"></nz-input-number>
+          <nz-input-number formControlName="postArticleScore" [nzMin]="0" [nzStep]="1"></nz-input-number>
         </div>
 
         <div nz-col [nzSpan]="8">
