--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -7,7 +7,7 @@
 
   <div>
     <button  nzTrigger="click" nz-button nz-dropdown [nzDropdownMenu]="tutorialList">
-      Thiết lập / Cấu hình
+      Hướng dẫn thiết lập / Cấu hình
     </button>
     <nz-dropdown-menu #tutorialList="nzDropdownMenu">
       <div nz-row [nzGutter]="[16, 16]" class="tutorial-list" nz-menu>
